[package]
name = "ssvm_nodejs_starter"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_nodejs_starter_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
tract-tensorflow = "0.6.3"
